# deadbeef-dr-meter

./: .gitignore  LICENSE  Makefile  Makefile.am  PKGBUILD  README.md  configure.ac  control
.github/workflows/: Ubuntu.yml  ci.yml
dr_meter/: Makefile  Makefile.am
dr_meter/include/: audio_functions.h  audio_rms.h  block_analyser.h  channel_interpreter.h  dr_log_printer.h  dr_meter.h  dr_stats.h  print_dr_meter.h  sample_mean.h  selection.h  tagged_dr_data.h  tagged_dr_datum.h  thread_data.h  thread_datum.h  thread_runner.h
dr_meter/src/: audio_functions.c  audio_rms.c  block_analyser.c  channel_interpreter.c  dr_log_printer.c  dr_meter.c  dr_stats.c  sample_mean.c  tagged_dr_data.c  thread_data.c  thread_runner.c
dr_plugin/: Makefile  Makefile.am
dr_plugin/include/: block_analyser.h  channel_interpreter.h  compute_dr.h  dr_log_printer.h  dr_meter.h  dr_meter_plugin.h  duration.h  filepath.h  print_dr_meter.h  sprint_dr_log.h  thread_runner.h
dr_plugin/src/: block_analyser.c  channel_interpreter.c  decibels.c  dr_log_printer.c  dr_meter.c  dr_meter_plugin.c  duration.c  filepath.c  print_dr_meter.c  thread_data.c  thread_runner.c
dr_plugin_gui/: Makefile  Makefile.am
dr_plugin_gui/include/: dialogue.h  dr_display_data.h  dr_meter_plugin_gui.h  dr_run_data.h  mono_text.h  save_button.h  scrolled_mono_text.h
dr_plugin_gui/src/: dialogue.c  dr_display_data.c  dr_meter_plugin_gui.c  dr_run_data.c  duration.c  mono_text.c  save_button.c  scrolled_mono_text.c
include/: block_analyser.h  ddb_dr_meter.h  decibels.h  dr_meter.h  dr_stats.h  histogram.h  selection.h  thread_data.h  thread_datum.h
src/: block_analyser.c  ddb_dr_meter.c  dr_meter.c  dr_stats.c  histogram.c  thread_data.c  thread_runner.c
