lib_LTLIBRARIES = libdrmeter.la
libdrmeter_la_SOURCES = src/audio_rms.c src/block_analyser.c src/channel_interpreter.c src/decibels.c src/dr_meter.c src/dr_stats.c src/print_dr_meter.c src/thread_data.c src/thread_runner.c
libdrmeter_la_CPPFLAGS = -I./include 
libdrmeter_includedir = $(includedir)/drmeter
libdrmeter_include_HEADERS = include/audio_rms.h include/block_analyser.h include/channel_interpreter.h include/decibels.h include/dr_meter.h include/dr_stats.h include/print_dr_meter.h include/selection.h include/thread_data.h include/thread_datum.h include/thread_runner.h
